<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mathub</string>
    <string name="first" translatable="false">If the unknown of the equation is under the sign of the square root,then such an equation is called irrational.</string>
    <string name="second" translatable="false"> Many situations in life are described by irrational equations.</string>
    <string name="third" translatable="false"> First irrational equation`</string>
    <string name="fourth" translatable="false"> Second irrational equation`</string>
    <string name="fifth" translatable="false">The absolute value or modulus of a non-negative number 𝑥 is called the number 𝑥 itself:  The modulus of a negative number 𝑥 is called its opposite: </string>
    <string name="sixth" translatable="false">|𝑥| = 𝑥</string>
    <string name="seventh" translatable="false">The modulus of a negative number 𝑥 is called its opposite: |𝑥| = −𝑥.</string>
    <string name="eight" translatable="false">1.|a| = 0</string>
    <string name="ninth" translatable="false">2.|a * b| = |a| * |b|</string>
    <string name="ten" translatable="false">3.|a/b| = |a| / |b|</string>
    <string name="str11" translatable="false">4.|a|² = a²</string>
    <string name="str12" translatable="false">5.|-a| = |a|</string>
    <string name="str13" translatable="false">Consider the equation ∣𝑥∣=𝐴, where 𝐴 is a real number. It follows from the definition and properties of the module that the equation ∣𝑥∣=𝐴:</string>
    <string name="str14" translatable="false">2) in the case of 𝐴=0, it has the only solution: 𝑥=0 </string>
    <string name="str15" translatable="false">3) For 𝐴>0, it has two solutions: 𝑥 = 𝐴 and 𝑥 = −𝐴</string>
    <string name="str16">We have already considered the designation of some sets on the number line: (−∞;∞),(𝑎;+∞),[𝑎;+∞),(−∞;𝑎],(−∞;𝑎)</string>
    <string name="str17">If a number 𝑥 simultaneously satisfies the inequalities 𝑥 more than −4 and 𝑥 less than 5, then it satisfies the two-sided inequality  𝑥 greater than -4 but less than 5.</string>
    <string name="str18">The set of all numbers satisfying the two-sided inequality 𝑥 more than -4 and less than 5 is called a numerical interval and is denoted as (−4;5).</string>
    <string name="str19">Arithmetic progression is the numerical sequence in which each term, starting from the second, is equal to its predecessor plus the same number.</string>
    <string name="str20">If {𝑎𝑛} is an arithmetic progression, then for any natural number 𝑛 the following formula is true: 𝑎𝑛+1=𝑎𝑛+𝑑
The number 𝑑 is called the difference of the arithmetic progression.</string>
    <string name="str21">The 𝑛-th term of the progression with the first term 𝑎1 and the difference 𝑑 is expressed by the following formula: 𝑎𝑛=𝑎1+𝑑(𝑛−1). This formula is called the formula for the 𝑛-th term of an arithmetic progression.</string>
    <string name="str22">Given the first term of the arithmetic progression {𝑎𝑛} and the difference 𝑎1=0 and 𝑑=2. he first five members of the progression?</string>
    <string name="str23">The percentage of a number can be found in different ways.</string>
    <string name="str24">For example:</string>
    <string name="str25">Let is find 18% of the number 300.</string>
    <string name="str26">I variant. Let is take action.</string>
    <string name="str27">First, find 1% of 300.
        300:100=3</string>
    <string name="str28">Multiply the obtained number by the number of percentages.</string>
    <string name="str29">3·18=54%</string>
    <string name="str30">So 18% of 300 is equal to 54%.</string>
    <string name="str31">II variant. Let is present the percentage in the form of a regular fraction.</string>
    <string name="str32">If you want to find the percent of a number, you need to:</string>
    <string name="str33">1) write the percentage in the form of a regular fraction.</string>
    <string name="str34">2) multiply the given number by the received fraction.</string>
    <string-array name="languages">
        <item>Polytech</item>
        <item>Physmath</item>
        <item>Ayb</item>
        <item>Quantum</item>
    </string-array>
    <string-array name="variants">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="back">Go back</string>
    <string name="quest_num">Question number</string>
    <string name="question">Question</string>
    <string name="var1">Variant 1</string>
    <string name="var2">Variant 2</string>
    <string name="var3">Variant 3</string>
    <string name="var4">Variant 4</string>
    <string name="right_var">Right variants number</string>
    <string name="create_button">Create next question</string>
    <string name="choose_school">Choose your high school</string>
    <string name="test_num">Test number</string>
    <string name="back2">Back</string>
    <string name="text">"Let's learn mathematics together!!!"</string>
    <string name="equation">Equations and inequalities</string>
    <string name="num_range">Numerical range</string>
    <string name="prog">Progressions</string>
    <string name="percent">Percent</string>
    <string name="back3">Back</string>
    <string name="next1">Next</string>
    <string name="irr_equal">Irrational equations</string>
    <string name="irr_text1">Explanation:</string>
    <string name="irr_text2">We must remember that x >= 0 and x = 9*9</string>
    <string name="irr_text3">Solution:x = 81</string>
    <string name="irr_text4">2x+1 >= 0 and (2x+1) = 3*3</string>
    <string name="irr_text5">Solution:x = 4</string>
    <string name="task_button">Tasks</string>
    <string name="mod_text1">Examples:|8| = 8, |-3| = 3, |0|= 0</string>
    <string name="mod_text2">Module properties</string>
    <string name="mod_text3">1) has no solution in the case of 𝐴 less 0 or A = 0</string>
    <string name="mod_text4">Examples</string>
    <string name="mod_text5">First equation: |3x−1|=11, x = ?</string>
    <string name="mod_text6">Solution: 3x−1=11  or  3x-1=(-11)</string>
    <string name="mod_text7">x = 4  or  x = (-3)</string>
    <string name="mod_text8">Second equation: |2𝑦−1|=3, y = ?</string>
    <string name="mod_text9">Solution: (2y-1)² = 3²</string>
    <string name="mod_text10">y = 2 and y = (-1)"</string>
    <string name="task_text1">"Let's practise!!!"</string>
    <string name="task_text2">Task 1: |5x - 16| = 4, x - ?</string>
    <string name="task_text3">Task 2: |2x + 35| = 15, x-?</string>
    <string name="task_text4">Task 3: |x - 12| = |7𝑥 - 6|, x-?</string>
    <string name="equal_text1">Task 1: √5x - 16 = 2, x - ?</string>
    <string name="equal_text2">Task 2: √5x + 36 = √15𝑥 − 64, x-?</string>
    <string name="equal_text3">Task 3: √3x - 12 = √-7𝑥 + 38, x-?</string>
    <string name="range_text1">Open and closed ranges on the numerical axis</string>
    <string name="range_text2">Definition</string>
    <string name="range_text3">Task 1: Given the first term of the arithmetic progression {𝑎𝑛} and its difference: 𝑎1=1 and 𝑑=3. the tenth term of the progression?</string>
    <string name="percent_text1">Percent of a number</string>
    <string name="percent_task1">Task 1: 8/20 present the fraction as a percentage?</string>
    <string name="percent_task2">Task 2: 3m were cut from 20 meters of wool fabric. Determine what percentage of the wool fabric was cut?</string>
    <string name="percent_task3">Task 3: Write the fraction as a percentage. 21/20 - ?</string>
    <string name="prog_text1">Progression</string>
    <string name="prog_text2">Example 1:</string>
    <string name="prog_text3">Solution: a5 = a1 + 4d</string>
    <string name="prog_task1">Task 1: Given the first term of the arithmetic progression {𝑎𝑛} and its difference: 𝑎1=1 and 𝑑=3. the tenth term of the progression?</string>
    <string name="prog_task2">Task 2: Given an arithmetic progression {𝑎𝑛}: 𝑎1=1 and a8=15. progression d?</string>
    <string name="prog_task3">Task 3: If {𝑎𝑛} in arithmetic progression 𝑎7=−3 and 𝑎9=1, a8 - ?</string>
    <string name="random_text">There are random tests for you!</string>
    <string name="test_number">Test number</string>
    <string name="button">"Let's go"</string>
    <string name="range_task1">Task1: What positive number belong to the interval [−2;2)? </string>
    <string name="range_task2">Task2: Which numbers belong to the given interval: (−∞;−5)</string>
    <string name="range_task3">Task3: Determine whether the following statement is true or false: −12∈(−12;7]</string>
    <string name="variant1">A) True</string>
    <string name="variant2">B) False</string>
    <string name="register">Registration</string>
    <string name="user">User name</string>
    <string name="mail">Email or Gmail</string>
    <string name="password">Password</string>
    <string name="password2">Check password</string>
    <string name="register2">Register</string>
    <string name="finish">FINISH!</string>
    <string name="score" tools:ignore="DuplicateDefinition">Your score:</string>
    <string name="quest">Question 0</string>
    <string name="quest2">Question text</string>
    <string name="next">Next</string>
    <string name="home_text1">You have 4 pending tests!!!</string>
    <string name="home_text2">Here are the tests</string>
    <string name="home_text3">Polytech High School</string>
    <string name="home_text4">Physmath High School</string>
    <string name="home_text5">Quantum College</string>
    <string name="home_text6">Ayb School</string>
    <string name="home_text7">"Let's learn together"</string>
    <string name="home_text8">Mathematics</string>
    <string name="home_text9">Change language</string>
    <string name="profile_text1">Log in page</string>
    <string name="profile_text2">Email</string>
    <string name="profile_text3">Password</string>
    <string name="profile_text4">Log in</string>
    <string name="profile_text5">"Click if you don't have an account"</string>
    <string name="profile2_text1">Click to change photo</string>
    <string name="profile2_text2">name surname</string>
    <string name="profile2_text3">Your score is</string>
    <string name="profile2_text4">Tests you have done</string>
    <string name="profile2_text5">Scroll down to see tests</string>
    <string name="profile2_text6">Polytech</string>
    <string name="profile2_text7">Physmath</string>
    <string name="profile2_text8">Quantum</string>
    <string name="profile2_text9">Ayb</string>
    <string name="profile2_text10">Log out</string>
    <string name="profile2_text11">Add tasks</string>
    <string name="school_text1">Choose your stream and find your dream college or school.</string>
    <string name="school_text2">Polytech School/College</string>
    <string name="school_text3">Physmath High school</string>
    <string name="school_text4">Quantum College</string>
    <string name="school_text5">Ayb School</string>
    <string name="create_test">Create test</string>
    <string name="alldone">You have done all tests.</string>
    <string name="polytech1">"The acceptance of applications for students who want to study in the 10th grade of the Polytechnic High School will be carried out from July 3 to 15 at the University Admission Center.
The applicant, along with a legal representative (parent, adopter or guardian), submits to the University admission center (admission committee):
1. Application
2. 4 photos (3×4 size)
3. Copy of 9th grade graduation certificate
4. Identity document (passport or birth certificate) and a copy
5. Copy of the parent's passport
6. Copy of Social Security Card
7. Receipt for the payment of AMD 3500 for accepting cases."</string>
</resources>