<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ayb_back"
    tools:context=".Equals1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Equals2"
        tools:ignore="RedundantNamespace,ScrollViewSize">


        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="250dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/back11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/back3"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:typeface="serif"
                tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintButtonSize" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="6dp"
            android:text="@string/percent_text1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="45dp"
            app:layout_constraintBottom_toTopOf="@id/first"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="3dp"
            android:text="@string/str23"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="RtlHardcoded,SpUsage,TextSizeCheck" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="1dp"
            android:gravity="center"
            android:text="@string/str24"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="SpUsage,TextSizeCheck,TextContrastCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:text="@string/str25"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/str26"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str27"
            android:textColor="@color/white"
            android:layout_marginHorizontal="15dp"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/str28"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str29"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:layout_marginHorizontal="15dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str30"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str31"
            android:layout_marginVertical="5dp"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="(18 * 300)/100 = 54% "
            android:layout_marginVertical="2dp"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/range_text2"
            android:layout_marginVertical="6dp"
            android:textColor="@color/white"
            android:textSize="38dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str32"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/str33"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:text="@string/str34"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:typeface="serif"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintLongText" />

        <Button
            android:id="@+id/task_button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:minWidth="140dp"
            android:text="@string/task_button"
            android:typeface="serif"
            android:textSize="22dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText,SpUsage,TextSizeCheck,VisualLintButtonSize" />


    </LinearLayout>
</ScrollView>