<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchoolFragment"
    android:background="@drawable/back2"
    android:orientation="vertical">

    <Button

        android:id="@+id/back1"
        android:typeface="serif"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back2"
        android:textSize="23dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:gravity="center"
        app:layout_constraintHeight_percent="0.3"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:typeface="serif"
        android:layout_marginHorizontal="10dp"
        android:text="@string/text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38dp"
        app:layout_constraintBottom_toTopOf="@id/polytech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/equal0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/polytech_back"
        android:gravity="center"
        android:text="@string/equation"
        android:typeface="serif"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@id/numeric_range"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintWidth_percent="0.8"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onEqualClick"
        tools:ignore="NotSibling" />

    <TextView
        android:gravity="center"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.18"
        android:id="@+id/numeric_range"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:typeface="serif"
        android:layout_gravity="center"
        android:text="@string/num_range"
        android:background="@drawable/physmath_back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/equal0"
        app:layout_constraintBottom_toTopOf="@id/progression"/>

    <TextView
        android:gravity="center"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.16"
        android:id="@+id/progression"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:typeface="serif"
        android:background="@drawable/quantum_back"
        android:text="@string/prog"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeric_range"
        app:layout_constraintBottom_toTopOf="@id/percent"
        tools:ignore="UnknownId" />

    <TextView
        android:gravity="center"
        app:layout_constraintWidth_percent="0.5"
        android:id="@+id/percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:typeface="serif"
        android:background="@drawable/ayb_back"
        android:text="@string/percent"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progression"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginBottom="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>