<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultOfTest"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/back_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:text="@string/back3"
        android:textSize="25dp"/>
    <TextView
        android:id="@+id/finish"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="60sp"
        android:typeface="serif"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:textSize="35sp"
        android:typeface="serif"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/finish"
        />

    <ListView
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_texts"
        android:id="@+id/resuld_lv"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        tools:ignore="MissingConstraints" />
    </LinearLayout>



</ScrollView>